<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <Button
            android:id="@+id/btn_sign_outId"
            android:layout_width="100dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />

    <RelativeLayout
        android:id="@+id/ly_ac_relativeId"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="0.51">

        <Button
            android:id="@+id/btn_ac_statusId"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:text="@string/visible"
            android:layout_below="@+id/img_ac_typeId"
            android:layout_alignRight="@+id/img_ac_typeId"
            android:layout_alignEnd="@+id/img_ac_typeId" />

        <ImageView
            android:id="@+id/img_ac_typeId"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@android:drawable/presence_online" />

        <ImageButton
            android:id="@+id/btn_ac_userId"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/img_ac_typeId"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:background="@mipmap/ic_launcher_round" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_ac_relativeId2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.09">

        <ImageButton
            android:id="@+id/btn_ac_mailId"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <Button
            android:id="@+id/btn_ac_showId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:enabled="false"
            android:text="@string/lbl_ac_showId" />
    </RelativeLayout>

    <EditText
        android:id="@+id/ed_ac_searchId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/ph_search_here"
        android:inputType="textPersonName"
        android:onClick="textClick" />
    <TextView
        android:id="@+id/tv_ac_availServiceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_ac_browserId"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse" />


</LinearLayout>